--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
 	<div id="banner">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
+		<div class="arrow arrow_left">
+			<img src="assets/images/arrow_left.png" alt="left arrow">
+		</div>
+		<div class="arrow arrow_right">
+			<img src="assets/images/arrow_right.png" alt="right arrow">
+		</div>
 		<div class="dots">
+
+
 		</div>
 	</div>
 	<section id="about-us" class="container">
