--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<p id="text">Impressions tous formats <span>en boutique et en ligne</span></p>
 		<div class="arrow arrow_left"><img src="assets/images/arrow_left.png" alt="left arrow"></div>
 		<div class="arrow arrow_right"><img src="assets/images/arrow_right.png" alt="right arrow"></div>
-		<div class="dots"></div>
+		<div class="dots" id="dots"></div>
 	</div>
 	<section id="about-us" class="container">
 		<div>
