--- a/index.html
+++ b/index.html
@@ -16,14 +16,20 @@
 	</h1>
 	<a class="btn devis" href="mailto:contact@print-it.tld">Devis</a>
 </header>
+
 <main>
 	<div id="banner">
+		<!-- Slide image --> 
 		<img class="banner-img" src="assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
+		<!-- Slide text --> 
 		<p id="text">Impressions tous formats <span>en boutique et en ligne</span></p>
+		<!-- Slide arrows --> 
 		<div class="arrow arrow_left"><img src="assets/images/arrow_left.png" alt="left arrow"></div>
 		<div class="arrow arrow_right"><img src="assets/images/arrow_right.png" alt="right arrow"></div>
+		<!-- Slide dots --> 
 		<div class="dots" id="dots"></div>
 	</div>
+
 	<section id="about-us" class="container">
 		<div>
 			<h2>Qui sommes-nous ?</h2>
@@ -124,6 +130,6 @@
 		<img class="footer-logo" src="./assets/images/logo.png" alt="Print it ! Impressions d'entreprises" >
 	</div>
 </footer>
-<script src="./assets/script.js"></script>
+<script src="./assets/script.js" defer></script>
 </body>
 </html>
