Supprimé console.log et id="dots". Modifié function() à () =>

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="arrow arrow_left"><img src="assets/images/arrow_left.png" alt="left arrow"></div>
 		<div class="arrow arrow_right"><img src="assets/images/arrow_right.png" alt="right arrow"></div>
 		<!-- Slide dots --> 
-		<div class="dots" id="dots"></div>
+		<div class="dots"></div>
 	</div>
 
 	<section id="about-us" class="container">
